name:                data-hfix
version:             0.1.0.0
homepage:            https://github.com/rolandz/data-hfix
license:             BSD3
license-file:        LICENSE
author:              Roland Zumkeller
maintainer:          Roland.Zumkeller@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.HFix
  default-extensions:  RankNTypes, TypeOperators, KindSignatures, GADTs, DeriveFunctor
  build-depends:       base, mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
