name:                data-hfix
version:             0.1.0.0
homepage:            https://github.com/rolandz/data-hfix
license:             BSD3
license-file:        LICENSE
author:              Roland Zumkeller
maintainer:          Roland.Zumkeller@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Data.HAssocList
    Data.HFix
    Data.HMap
    Data.HPrelude

  other-modules:
    Examples.Expr

  default-extensions:  RankNTypes, TypeOperators, KindSignatures, GADTs, DeriveFunctor, ScopedTypeVariables
  build-depends:       base, mtl, containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
